--- a/composer.json
+++ b/composer.json
@@ -68,5 +68,9 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/maker-bundle": "^1.36"
     }
 }
