--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "denismitr/translit": "^3.0",
         "doctrine/dbal": "2.*",
@@ -15,6 +16,7 @@
         "doctrine/orm": "^2.10",
         "knplabs/doctrine-behaviors": "^2.2",
         "nelmio/api-doc-bundle": "^4.6",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
@@ -27,8 +29,7 @@
         "symfony/twig-bundle": "5.2.*",
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "ext-json": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "optimize-autoloader": true,
